# MyNDKStudy

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/tech/xiaoniu/myndkstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_facade.cpp  jni_facade.h
app/src/main/cpp/fibonacci/: fibonacci.cpp  fibonacci.h
app/src/main/java/tech/xiaoniu/myndkstudy/: FibonacciResult.kt  MainActivity.kt  NdkBridge.kt
app/src/main/res/drawable/: ic_minus.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/tech/xiaoniu/myndkstudy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
